<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="LoginTitle">LOGIN</string>
    <string name="emailId">Email Id</string>
    <string name="password">Password</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>
    <string name="dontHaveAccount">I DON\'T HAVE ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile No</string>
    <string name="have_account">I HAVE AN ACCOUNT</string>
    <string name="search_categories">Search Categories</string>
    <string name="search">Search</string>
    <string name="close_search">Close</string>
    <string name="category_image">CategoryImage</string>
    <string name="product_image">productImage</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="phonename">RealMe Nazro 50</string>
    <string name="homeSuperCart">SUPER CART\n\n</string>
    <string name="products">PRODUCTS</string>
    <string name="Searchbtn">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billAmount">Total Bill Amount</string>
    <string name="checkout">Checkout</string>
    <string name="mobileName">RealMe Nazro 50</string>
    <string name="priceofProduct">$ 200</string>
</resources>