<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="@dimen/loginImageWidth"
        android:layout_height="@dimen/loginImageHeight"
        android:src="@drawable/cart"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/loginIcon"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/v1"
        app:layout_constraintGuide_percent=".10"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/v2"
        app:layout_constraintGuide_percent=".90"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/h1"
        app:layout_constraintGuide_percent=".85"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailId"
        android:id="@+id/txtviewemailid"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/loginIcon"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edttxtemailidlogin"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        app:layout_constraintTop_toBottomOf="@id/txtviewemailid"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintEnd_toStartOf="@id/v2"
        android:background="@drawable/text_box_shape"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/txtviewpassword"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/edttxtemailidlogin"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/edttxtpasswordlogin"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/txtviewpassword"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintEnd_toStartOf="@id/v2"
        android:background="@drawable/text_box_shape"
        />
    <ImageView
        android:id="@+id/imgShowPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/outline_disabled_visible_24"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@id/edttxtpasswordlogin"
        app:layout_constraintTop_toTopOf="@id/edttxtpasswordlogin"
        app:layout_constraintBottom_toBottomOf="@id/edttxtpasswordlogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_color"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        android:text="@string/forgotPassword"
        android:id="@+id/forgotPasswordlogin"
        android:textAppearance="@style/TextAppearance"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintTop_toBottomOf="@id/edttxtpasswordlogin"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:text="@string/LoginTitle"
        android:id="@+id/btnLogin"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintEnd_toEndOf="@id/v2"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordlogin"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iDontHaveAccount"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/secondary_color"
        android:textAppearance="@style/TextAppearance"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintEnd_toEndOf="@id/v2"
        android:layout_marginTop="@dimen/LoginAndRegisterTopMargin"
        app:layout_constraintTop_toBottomOf="@id/h1"/>



</androidx.constraintlayout.widget.ConstraintLayout>