<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/homeFragmentHeight"
        android:layout_marginStart="@dimen/Margins"
        android:layout_marginTop="@dimen/Margins"
        android:layout_marginEnd="@dimen/Margins"
        android:background="@drawable/text_box_shape"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtsearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            android:hint="@string/search_categories"
            android:inputType="text"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/PaddingEnd"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="@dimen/searchTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="@dimen/homeimgidthAndHeight"
            android:layout_height="@dimen/homeimgidthAndHeight"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/search"
            android:padding="4dp"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgCloseSearch"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_primary" />

        <ImageView
            android:id="@+id/imgCloseSearch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/close_search"
            android:padding="4dp"
            android:src="@drawable/outline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        tools:listitem="@layout/item_category"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>

</androidx.constraintlayout.widget.ConstraintLayout>